Version 5.3.0.24
Added PLTCOMPILEDROOTS and --compiled/-R command-line flag
Added `reroot-path'

Version 5.3.0.23
Changed make-log-receiver to accept a logger name as an
 event filter
Addded define-logger
Changed -W, -L, PLTSTDERR, and PLTSYSLOG to support log
 filters of the form "<level> <name>=<level> ..."
Changed log-error, etc., to support format mode
Added racket/format, which is re-exported by racket

Version 5.3.0.22
Changed a thread's initial prompt to use the default handler
 (instead of accepting and ignoring abort arguments)
ffi/unsafe: added cpointer-gcable?
racket/class: added dynamic-get-field and dynamic-set-field!

Version 5.3.0.20
Added exn:break:hang-up and exn:break:terminate, added
 extra argument to break-thread and place-break, and
 redirect SIGTERM and SIGHUP as breaks
Add #:fill option to for/vector, for*/vector, for/flvector,
 for*/flvector, for/fxvector, and for*/fxvector

Version 5.3.0.16
scribble/base: add items/c
scribble/decode: add spliceof

Version 5.3, August 2012
Added submodules, including module*
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
Added impersonate-continuation-mark-key,
 chaperone-continuation-mark-key, make-continuation-mark-key,
 continuation-mark-key?, impersonate-prompt-tag, and
 chaperone-prompt-tag
Added progress-evt?, thread-cell-values?, prefab-key?,
 semaphore-peek-evt?, channel-put-evt?
Fixed handle-evt to disallow a handle-evt
Added variable-reference->module-path-index
Added syntax-local-submodules, module-path-index-submodule,
 and module-compiled-submodules
Changed module-path-index-join to support a submodule argument
Changed module-path? to report #t for paths
Changed resolved module paths to allow lists that represent
 submodule paths; see the revised contract on resolve-module-path-name
Changed the module name resolver protocol so that a module declaration
 always triggers a notifification, and a notification supplies